lesson4/excercise/canary-deployment/app-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1-deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: hashicorp/http-echo
        args:
        - "-text=Response from app1"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: app-v1-service
spec:
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 5678

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v2-deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: hashicorp/http-echo
        args:
        - "-text=Response from app2"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: app-v2-service
spec:
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 5678
